--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 /.idea/compiler.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/runConfigurations.xml
+/.idea/uiDesigner.xml
+/Herokuapp.iml
+/pom.xml
+/.idea/libraries/
+/.idea/
